--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,15 +1,9 @@
-
-
-
 /* Preferred box-sizing value */
 *,
 *::before,
 *::after {
 	box-sizing: border-box;
 }
-
-
-
 
 /* For images to not be able to exceed their container */
 img {
@@ -44,6 +38,12 @@ main {
 	max-width: 40rem;
 }
 
+header a {
+	&:hover {
+		text-decoration: none;
+	}
+}
+
 h1 {
 	font-size: 3rem;
 }
@@ -58,4 +58,17 @@ a {
 
 a:hover {
 	text-decoration: underline;
+}
+
+ul {
+	padding-inline-start: 1.25rem;
+}
+
+li {
+	margin-block-end: 0.5rem;
+}
+
+p,
+li {
+	line-height: 1.4;
 }
