--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -26,7 +26,7 @@ body {
 	margin: 0;
 	background: #eee;
 	color: #333;
-	font-family: sans-serif;
+	font-family: 'Inter', sans-serif;
 	overflow-y: scroll;
 }
 
@@ -46,10 +46,11 @@ header a {
 
 h1 {
 	font-size: 3rem;
+	font-weight: 900;
 }
 
-:where(h1, h2, h3) {
-	font-weight: bold;
+:where(h2, h3) {
+	font-weight: 700;
 }
 
 a {
